feature/0.2.x Updated changelog; updated info.json description; turned off some logging

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -5,23 +5,15 @@ Date: 2025-09-12
     - Added additional, optional, "Fire wave" setting
       -> Things in the blast radius will be set on fire
     - Added additional settings for the atomic-bomb item
-      - Range_Modifier
-        -> Multiplier of the range at which nukes can be fired from a rocket launcher, default = 1.5
-      - Cooldown_Modifier
-        -> Multiplier of the cooldown between firing shots, default = 10
-      - Stack_Size
-        -> Stack size of atomic-bombs, default = 10
-      - Weight_Modifier
-        -> Multiplier of the atomic-bombs weight; affects whether they can be launched into orbit or not, default = 1.5 * tons
+      - Range_Modifier -> Multiplier of the range at which nukes can be fired from a rocket launcher, default = 1.5
+      - Cooldown_Modifier -> Multiplier of the cooldown between firing shots, default = 10
+      - Stack_Size -> Stack size of atomic-bombs, default = 10
+      - Weight_Modifier -> Multiplier of the atomic-bomb's weight; affects whether they can be launched into orbit or not, default = 1.5 * tons
     - Added additional settings for the atomic-bomb recipe
-      - Crafting_time
-        -> Crafting time, in seconds, for one crafting cycle of the atomic-bomb recipe
-      - Input_Multiplier
-        -> Multiplier of the quantity needed for each input item to the atomic-bomb recipe
-      - Result_Count
-        -> Number of atomic-bombs created from one crafting cycle
-      - Recipe
-        -> String setting used to define the recipe and amounts for each ingredient for the atomic-bomb recipe
+      - Crafting_time -> Crafting time, in seconds, for one crafting cycle of the atomic-bomb recipe
+      - Input_Multiplier -> Multiplier of the quantity needed for each input item to the atomic-bomb recipe
+      - Result_Count -> Number of atomic-bombs created from one crafting cycle
+      - Recipe -> String setting used to define the recipe and amounts for each ingredient for the atomic-bomb recipe
       - i.e.
         -> Vanilla = processing-unit=10,explosives=10,uranium-235=30
         -> Space Age = processing-unit=10,explosives=10,uranium-235=100
