bug-fix/0.3.x-invisible-atomic-rockets Updated changelog

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.1
+Date: 2025-09-20
+  Bug Fixes:
+    - Fixed atomic-rockets being invisible when fired from a Spidertron while in "automatic" fire mode, while the Quality mod is present
+    - Corrected, somewhat, the orientation of atomic-rockets when fired from a Spidertron to not always be the same direction as the target
+      - Vanilla behavior is for rockets to be fired initially in the direction the Spidertron's head is facing
+---------------------------------------------------------------------------------------------------
 Version: 0.3.0
 Date: 2025-09-19
   Minor Features:
