bug-fix/0.3.x Initial commit

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.2
+Date: 2025-09-20
+  Bug Fixes:
+    -
+---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 2025-09-20
   Bug Fixes:
