--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -9,9 +9,9 @@ Date: 2025-09-21
           - Launch signal must be a value of > 0 for a rocket to launch
           - Target coordinates of "signal-X" = 0 and "signal-Y" = 0, i.e. {0,0}, are disabled by default, as they also corespond with no coordinates provided
             - Can be overidden by enabling "Alllow Targeting Origin" runtime setting, and providing an appropriate override signal
-    - Added settings for toggling manually launched ICBM messages
-    - Added settings for toggling circuit launched ICBM messages
-    - Added settings for toggling circuit launched ICBM target pins
+    - Added setting for toggling manually launched ICBM messages
+    - Added setting for toggling circuit launched ICBM messages
+    - Added setting for toggling circuit launched ICBM target pins
   Misc:
     - Added automatic compatability for "Nuclear Science" by atanvarno
 ---------------------------------------------------------------------------------------------------
