--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.1
+Date: 2025-10-09
+  Bug Fixes:
+    - Fixed rocket-silos not being detected/tracked when placed on a space-platform
+    - Fixed being able to launch a rocket from a silo that has no power
+  Misc:
+    - Updated base, quality, and space-age version requirements to 2.0.69
+---------------------------------------------------------------------------------------------------
 Version: 0.5.0
 Date: 2025-10-09
   Minor Features:
