--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.3
+Date: 2025-10-30
+  Bug Fixes:
+    - Fixed an error of providing NaN to math.random
+    - Fixed an error of providing infinity to math.random
+---------------------------------------------------------------------------------------------------
 Version: 0.7.2
 Date: 2025-10-24
   Bug Fixes:
