feature/0.8.x Updated changelog

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,24 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.0
+Date: 2025-11-08
+  Minor Features:
+    - Added "Rods from God"
+      - Kinetic weapon on par with the atomic-bomb/warhead in terms of desctructive force, without the radioactive fallout
+    - Added "Jericho" warheads
+      - Single warhead that serparates on delivery into a barrage of multiple sub-rockets
+    - Added "Mjölnir" warheads
+      - Explosive payload that calls down a lightning bolt and releases chain-lightning on impact
+    - Introduced the "payload-vehicle" item/recipe
+      - Used in the crafting of the above payloads
+    - Added usual set of configurable startup settings for the above "Rod from God", "Jericho", "Mjölnir", and "Payload Vehicle"
+  Bug Fixes:
+    - Fixed reinitialization could potentially instantiate the wrong objects
+    - Fixed ballistic-rocket-parts not being visible when selecting an item filter
+    - Fixed SimpleAtomicArtillery runtime settings were actually using K2_SO's settings
+    - Fixed RCUs not being available when playing vanilla even when atomic-warheads were enabled
+  Misc:
+    - Added TheEckelmonster-core-library as a required dependency
+---------------------------------------------------------------------------------------------------
 Version: 0.7.4
 Date: 2025-11-02
   Bug Fixes:
