--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,23 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.3
+Date: 2025-11-18
+  Features:
+    - Added "Surface processing rate" runtime setting
+      - Defines the "nth" tick that surface processing occurrs on, i.e. how many times per second to try processing surfaces
+      - Ranges from 1 to 60, default of 6, i.e. 10 times per second (60 ticks per second)
+  Bug Fixes:
+    - Fixed data migration would sometimes not apply properly when updating depending on the previous version
+  Misc:
+    - Reduced the default value from 12 to 8 for the number of surfaces processed per tick cycle setting when Space-Exploration is present
+    - Reduced the upper limit for the above setting from 2048 to 32
+    - Improved runtime performance
+      - Brought the update time for a ~200 hour save (on my computer) from ~0.5 - 0.6 ms, to ~0.05 - 0.07 ms at default settings
+        - Thanks to NOiZE for reporting the performance issue and sharing the save
+      - Regained about 10 frames on a nearly 600 hour decently modded personal save
+        - Brought the update time from ~2.4 - 2.6 ms, to ~0.06 - 0.10 ms at default settings
+      - Only downside to the improved performance, is that circuit-network connected rocket-silos will need to hold their launch signal longer
+        - From testing at default settings, it took about 2-3 seconds at the most for a circuit-network connected rocket-silo to launch
+---------------------------------------------------------------------------------------------------
 Version: 0.8.2
 Date: 2025-11-16
   Bug Fixes:
