bug-fix/0.8.x Updated changelog

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.4
+Date: 2025-11-20
+  Bug Fixes:
+    - Fixed immediate multiplayer desyncs if you weren't the first player to join the instance
+      - Thanks to Techjar for the report and sharing the save
+  Misc:
+    - Set the minimum version requirement if Space-Exploration is present to 0.7.35
+---------------------------------------------------------------------------------------------------
 Version: 0.8.3
 Date: 2025-11-18
   Features:
