bug-fix/0.8.x Updated changelog

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.6
+Date: 2025-11-30
+  Bug Fixes:
+    - Fixed multiple runtime errors when launching a rocket/delivering a payload
+---------------------------------------------------------------------------------------------------
 Version: 0.8.5
 Date: 2025-11-29
   Features:
