bug-fix/0.8.x Updated changelog

--- a/configurable-nukes/changelog.txt
+++ b/configurable-nukes/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.8.7
+Date: 2026-01-17
+  Bug Fixes:
+    - Fixed multiplayer desync(s) when launching an ICBM/delivering a payload
+---------------------------------------------------------------------------------------------------
 Version: 0.8.6
 Date: 2025-11-30
   Bug Fixes:
